--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://nimrab.github.io/react-hw",
+  "homepage": "http://nimrab.github.io/react_tasks",
   "name": "simple-react-homeworks",
   "version": "0.1.0",
   "private": true,
