--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.3.2",
     "@types/uuid": "^8.3.1",
+    "axios": "^0.26.0",
     "gh-pages": "^3.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
